# ATOC-vaporspec-project

./: .gitignore  LICENSE  README.md  demo_full_workflow.py  example_workflow.ipynb  original_notebook.txt  pyproject.toml  test_vaporspec.py
data/ERA5_sept2020/: era5_pressure_humidity_temperature_sept2020.nc  era5_singlelevel_cloud_sp_sept2020.nc  era5_singlelevel_radiation_accum_sept2020.nc
data/cu_atoc_sept2020/: cu_atoc_sept2020.csv
vaporspec/: __init__.py  analysis.py  core.py  io.py  plotting.py  utils.py
vaporspec/tests/: test_analysis.py  test_end_to_end.py  test_io.py  test_plotting.py
